removed the statics form and the related code of it

--- a/Projeto Estacionamento/Projeto Estacionamento.csproj
+++ b/Projeto Estacionamento/Projeto Estacionamento.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CircularProgressBar" Version="2.3.0" />
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="System.IO.Ports" Version="8.0.0" />
